<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_inventory"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ee461lteam16.grocerease.InventoryFragment">



    <ListView
        android:id="@+id/groceryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical"
        android:layout_above="@+id/linearLayout" />


    <TextView android:id="@+id/grocerylist_empty"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/grocerylist_empty" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <Button android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/move_to_inventory"
            android:text="@string/move_to_inventory"
            android:layout_alignParentBottom="true" />

        <Button android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/delete_from_list"
            android:text="@string/delete_from_list"
            />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle_outline_white_48dp"
        app:elevation="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>
